retrieveUnpackaged/objects/Application3__c.object
<CustomObject>
    <fields>
        <fullName>Disaster_Type__c</fullName>
        <label>Disaster Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fire Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Fighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readiness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <label>Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents_Foster_Grandparents_Only__c</fullName>
        <label>Documents- Foster Grandparents Only</label>
        <picklist>
            <picklistValues>
                <fullName>Articles of Incorporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List names of Funding Orgs/Sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement of Date of last A133 audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement-applicant subject to A133audit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documents_RSVP_Only__c</fullName>
        <label>Documents - RSVP Only</label>
        <picklist>
            <picklistValues>
                <fullName>Articles of Incorporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Financial Report User Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit or SF-990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient Contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement of Audit Status</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documents_SCP_Fixed_Only__c</fullName>
        <label>Documents- SCP Fixed Only</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Financial Report User Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit or SF-990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient Contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement of Audit Status</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documents_SCP_Only__c</fullName>
        <label>Documents- SCP Only</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Financial Report User Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit or SF-990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient Contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement of Audit Status</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documents__c</fullName>
        <inlineHelpText>All documents are required to be uploaded</inlineHelpText>
        <label>Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Aggregated Dollar Amounts of funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm. Advisory Group Names &amp; Addresses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS Certification of Non-Profit Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated Indirect Cost Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Director&apos;s Job Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roster of Volunteer Stations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <label>Draft</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EO_12372_Process__c</fullName>
        <inlineHelpText>Is this Application Subject to Review by State Executive Order 12372 Process?</inlineHelpText>
        <label>EO 12372 Process</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunities_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Economic Opportunities</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro-enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunities__c</fullName>
        <label>Economic Opportunities</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro-enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>K-12 Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-HS Education Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>Teacher Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-HS Education Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12 Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EmailNCCCCO__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_NCCC__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emaill__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emailprimary__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Taxpayer_Number_EIN_TIN__c</fullName>
        <formula>Project__r.Organization__r.EIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer/Taxpayer Number (EIN/TIN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Conservation_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Energy Conservation</label>
        <picklist>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Energy_Conservation__c</fullName>
        <label>Energy Conservation</label>
        <picklist>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_CP__c</fullName>
        <label>Energy Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Green Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Environment_Stewardship_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Environment Stewardship</label>
        <picklist>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness &amp; Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship_Conservation_C__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Environmental Stewardship &amp; Conservation</label>
        <picklist>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness &amp; Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship_Conservation__c</fullName>
        <label>Environmental Stewardship &amp; Conservation</label>
        <picklist>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness &amp; Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship__c</fullName>
        <label>Environmental Stewardship</label>
        <picklist>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness &amp; Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Equipment_Tool_Requests_for_NCCC__c</fullName>
        <inlineHelpText>What equipment and tools are requested from the NCCC to supplement the local supply?</inlineHelpText>
        <label>Equipment &amp; Tool Requests for NCCC</label>
        <length>245</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Tool_Safety_Hazards__c</fullName>
        <inlineHelpText>Identify any safety hazards associated with the tools and equipment that will be used on the project. Provide details of any safety training provided.</inlineHelpText>
        <label>Equipment &amp; Tool Safety Hazards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Tools_Storage_Provided__c</fullName>
        <inlineHelpText>What equipment, tools, and storage facilities will your organization provide?</inlineHelpText>
        <label>Equipment/Tools/Storage Provided</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Summary_or_Plan__c</fullName>
        <label>Evaluation Summary or Plan</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ex_Officer_Cost_Share__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ex. Officer Cost Share</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Summary1__c</fullName>
        <label>Executive Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAPIIS_Review_Comments__c</fullName>
        <description>Field is Used for Final Decision Process of Application. 
US # 1783. KY</description>
        <label>FAPIIS Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax_Number1__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_conga__c</fullName>
        <formula>Point_of_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Award_Identifier__c</fullName>
        <description>Federal Award Identifier</description>
        <inlineHelpText>Please enter Federal Award Identifier</inlineHelpText>
        <label>Federal Award Identifier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Entity_Identifier__c</fullName>
        <description>Federal Entity Identifier</description>
        <inlineHelpText>Please enter Federal Entity Identifier</inlineHelpText>
        <label>Federal Entity Identifier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal__c</fullName>
        <label>Federal</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Namee__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Area__c</fullName>
        <label>Focus Area</label>
        <picklist>
            <picklistValues>
                <fullName>Geographic Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Focus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_Areas_and_Objectives__c</fullName>
        <label>Focus Areas and Objectives</label>
        <picklist>
            <picklistValues>
                <fullName>Economic Opportunity - Financial Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans and Military Familes - Veterans and Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - Other Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Stewardship - At-Risk Ecosystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educations - School Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Futures - Aging in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Opportunity - Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Opportunity - Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Services - Disaster Assistance Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Futures - Obesity and Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Futures - Access to Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building - Capacity Building and Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Community Priorities - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - K-12 Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Former_SPR_Code__c</fullName>
        <description>This field is shown when NCCC is checked on NOFA.</description>
        <label>Former SPR Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_by_AC_State_National_or_VISTA__c</fullName>
        <inlineHelpText>if this project is funded by AmeriCorps State &amp; National grant or any AmeriCorps VISTA resources. In the text box, provide detailed information concerning the funding source and utilization of those funds.&quot;</inlineHelpText>
        <label>Funded by</label>
        <picklist>
            <controllingField>If_your_org_currently_funded_by_CNCS__c</controllingField>
            <picklistValues>
                <fullName>AmeriCorps State &amp; National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISTA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity_Title__c</fullName>
        <label>Funding Opportunity Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <inlineHelpText>&quot;Please identify if you have received funding in the past&quot;</inlineHelpText>
        <label>Funding History</label>
        <picklist>
            <picklistValues>
                <fullName>Never Received an AmeriCorps Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Formula</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goals_Objectives_of_the_Project__c</fullName>
        <label>Goals/Objectives of the Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-competitive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_characteristics__c</fullName>
        <inlineHelpText>Check any grant characteristic(s) that apply to the proposed program</inlineHelpText>
        <label>Grant characteristics</label>
        <picklist>
            <picklistValues>
                <fullName>Encore Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-based organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIG/Priority Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEM Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geographic Focus-Urban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geographic Focus-Rural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the above</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Grantee_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold Pending Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return for Re-work</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grants_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grants Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Have_funding_history_with_any_CNCS_org_A__c</fullName>
        <description>This field is for Application. KY</description>
        <inlineHelpText>Has your organization been previously funded or resourced through CNCS?</inlineHelpText>
        <label>Have funding history with any CNCS org?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_funding_history_with_any_CNCS_org__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <inlineHelpText>Has your org been funded or resourced through any of CNCS Programs?</inlineHelpText>
        <label>Have resource history with any CNCS org?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_restrictions__c</fullName>
        <inlineHelpText>Are there any common health conditions that might preclude an NCCC member from fully participating based on project location or project conditions?</inlineHelpText>
        <label>Health restrictions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures_CP__c</fullName>
        <label>Healthy Futures</label>
        <picklist>
            <picklistValues>
                <fullName>Access to Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aging in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures__c</fullName>
        <label>Healthy Futures</label>
        <picklist>
            <picklistValues>
                <fullName>Access to Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aging in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obesity &amp; Food</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Housing_End_Date__c</fullName>
        <label>Housing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Housing_Start_Date__c</fullName>
        <label>Housing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Housing_Street_Address__c</fullName>
        <label>Housing Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_Type__c</fullName>
        <label>Housing Type</label>
        <picklist>
            <picklistValues>
                <fullName>church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Will_Project_Meet_These_Needs__c</fullName>
        <inlineHelpText>Describe how the proposed project will help to meet these needs. What will be the final outcome(s) of services provided?</inlineHelpText>
        <label>How Will Project Meet These Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_teams_are_being_requested_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>How many teams are being requested?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>